# goit-pythonweb-hw-03

./: main.py  message.html  pyproject.toml  read.html
storage/: data.json
