[project]
name = "fullstack-web-development-hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "alexandra.mukhamedova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
